--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-	background-color: lightgray;
+	background-color: #fff;
 	font-family: "Inter", Arial, Helvetica, sans-serif;
 	font-weight: 400;
 	font-size: 24px;
